修改招标台账model，完成招标台账数据表展示

--- a/TenderInfo/Views/ProgressInfo/ProgressProject.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ProgressProject.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "招标进度--工程、服务";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<span id="userRole">
+<span id="userRole" class="hidden">
     @if (User.IsInRole("招标管理"))
     {
         @:招标管理
