--- a/TenderInfo/Views/ProgressInfo/TableInfoProject.cshtml
+++ b/TenderInfo/Views/ProgressInfo/TableInfoProject.cshtml
@@ -1,7 +1,37 @@
-﻿
-
+﻿<link href="~/Content/bootstrap-table-fixed-columns2.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap-table-fixed-columns2.js"></script>
 <table id="bsTable"></table>
 <script>
+    var editModel = function (id) {
+        //根据当前行的id获取当前的行数据
+        var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
+        $("#EditProgressModal").modal("show");
+
+        $("#tbxProgressIDEdit").val(row.ProgressInfoID);
+        $("#tbxProgressTypeEdit").val($("#typeSearch").text());
+
+        $("#tbxProjectNameEdit").val(row.ProjectName);
+        $("#ddlProgressTypeChildEdit").val(row.ProgressTypeChild);
+        $("#tbxInvestPriceEdit").val(row.InvestPrice);
+        $("#tbxProjectResponsiblePersonEdit").text(row.ProjectResponsiblePersonName);
+        $("#tbxContractResponsiblePersonEdit").val(row.ContractResponsiblePerson);
+
+        $("#tbxContractDeptContactDateEdit").val(row.ContractDeptContactDate);
+        $("#tbxProjectExplainEdit").val(row.ProjectExplain);
+
+        $("#tbxProgramAcceptDateEdit").val(row.ProgramAcceptDate == null ? "" : getJsonDateShort(row.ProgramAcceptDate));
+        $("#tbxTenderFileSaleStartDateEdit").val(row.TenderFileSaleStartDate == null ? "" : getJsonDateShort(row.TenderFileSaleStartDate));
+        $("#tbxTenderFileSaleEndDateEdit").val(row.TenderFileSaleEndDate == null ? "" : getJsonDateShort(row.TenderFileSaleEndDate));
+        $("#tbxTenderStartDateEdit").val(row.TenderStartDate == null ? "" : getJsonDateShort(row.TenderStartDate));
+        $("#tbxTenderSuccessFileDateEdit").val(row.TenderSuccessFileDate == null ? "" : getJsonDateShort(row.TenderSuccessFileDate));
+
+        $("#tbxOtherExplainEdit").val(row.OtherExplain);
+        $("#tbxRemarkEdit").val(row.Remark);
+
+        if ($("#userRole").text().trim() != "招标管理") {
+            $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
+        }
+    }
     $(function () {
         var operateEvents = {
             'click .editProgress': function (e, value, row, index) {
@@ -18,7 +48,7 @@
 
                 $("#tbxContractDeptContactDateEdit").val(row.ContractDeptContactDate);
                 $("#tbxProjectExplainEdit").val(row.ProjectExplain);
-
+                
                 $("#tbxProgramAcceptDateEdit").val(row.ProgramAcceptDate == null ? "" : getJsonDateShort(row.ProgramAcceptDate));
                 $("#tbxTenderFileSaleStartDateEdit").val(row.TenderFileSaleStartDate == null ? "" : getJsonDateShort(row.TenderFileSaleStartDate));
                 $("#tbxTenderFileSaleEndDateEdit").val(row.TenderFileSaleEndDate == null ? "" : getJsonDateShort(row.TenderFileSaleEndDate));
@@ -67,10 +97,10 @@
                         width: 185,
                         valign: "middle",
                         visible: true,
-                        formatter: function (value, row, index) {
-                            return '<a class="editProgress" href="javascript:void (0)" title="编辑">' + value + '</a>';
-                        },
-                        events: operateEvents
+                        formatter: function (value, row, index) {//这里的三个参数：value表示当前行当前列的值；row表示当前行的数据；index表示当前行的索引（从0开始）。
+                            var html = '<button type="button" onclick="editModel(' + row.ProgressInfoID + ')" class="btn btn-link">' + row.ProjectName + '</button >';
+                            return html;
+                        }
                     },
                     {
                         field: 'IsOver',
