--- a/TenderInfo/Views/Account/Material.cshtml
+++ b/TenderInfo/Views/Account/Material.cshtml
@@ -3,7 +3,73 @@
     ViewBag.Title = "招标管理台账--物资";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<span id="userRole" class="hidden">
+    @if (User.IsInRole("招标管理"))
+    {
+        @:招标管理
+    }
+</span>
+<div class="modal fade" id="NewAccountModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h5 class="modal-title">新建招标台账</h5>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="form-horizontal">
+                        <form id="NewAccountForm" method="post" enctype="multipart/form-data">
 
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="tbxProjectName">项目名称<span class="text-danger">(必填)</span></label>
+                                        <input id="tbxProjectName" name="tbxProjectName" type="text" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="tbxTenderFileNum">招标文件编号<span class="text-danger">(必填)</span></label>
+                                        <input id="tbxTenderFileNum" name="tbxTenderFileNum" type="text" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="ddlIsOnline">线上/线下<span class="text-danger">(必填)</span></label>
+                                        <select id="ddlIsOnline" name="ddlIsOnline" class="form-control">
+                                            <option value="线上" selected>线上</option>
+                                            <option value="线下">线下</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="ddlProjectResponsiblePerson">招标项目负责人<span class="text-danger">(必填)</span></label>
+                                        <select id="ddlProjectResponsiblePerson" name="ddlProjectResponsiblePerson" class="form-control">
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" id="btnNewAccountSubmit" class="btn btn-primary">
+                        <i class="glyphicon glyphicon-ok"></i> 提交
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">招标管理台账--物资</h3>
@@ -20,6 +86,24 @@
                     <div class="form-group">
                         <label for="tbxProjectNameSearch">项目名称：</label>
                         <input type="text" id="tbxProjectNameSearch" class="form-control" placeholder="项目名称">
+                    </div>
+                    <div class="form-group">
+                        <label for="tbxTenderFileNumSearch">项目文件编号：</label>
+                        <input type="text" id="tbxTenderFileNumSearch" class="form-control" placeholder="项目文件编号">
+                    </div>
+                    <div class="form-group">
+                        <label for="ddlProjectResponsiblePerson">招标项目负责人：</label>
+                        <select id="ddlProjectResponsiblePerson" class="form-control">
+                            <option value="" selected>全部</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="tbxApplyPersonSearch">申请人：</label>
+                        <input type="text" id="tbxApplyPersonSearch" class="form-control" placeholder="申请人">
+                    </div>
+                    <div class="form-group">
+                        <label for="tbxTenderSuccessPersonSearch">中标人名称：</label>
+                        <input type="text" id="tbxInvestPlanApproveNumSearch" class="form-control" placeholder="中标人名称">
                     </div>
                     <button type="button" id="btnSearch" class="btn btn-primary">
                         <span class="glyphicon glyphicon-search"></span> 查询
@@ -46,3 +130,108 @@
         </div>
     </div>
 </div>
+<script>
+    $(function () {
+        //加载项目负责人列表
+        //GetProjectResponsiblePersonList("search");
+        function GetProjectResponsiblePersonList(type) {
+            $.post("/SampleDelegation/GetProjectResponsiblePersonList", "", function (result) {
+                var list = "";
+                $.each(result, function (indexInArray, valueOfElement) {
+                    list += "<option value='" + valueOfElement.UserID + "'>" + valueOfElement.UserName + "</option>";
+                });
+                if (type === "search") {
+                    $("#ddlProjectResponsiblePersonSearch").append(list);
+                }
+                else {
+                    $("#ddlProjectResponsiblePerson").empty().append(list);
+                }
+            });
+        }
+
+        function ClearInfo() {
+            $("#tbxTenderFileNum,#tbxProjectName").val("");
+        }
+
+        //新增按钮
+        $("#btnAdd").click(function () {
+            ClearInfo();
+            GetProjectResponsiblePersonList();
+            $('#NewAccountModal').modal('show');
+        });
+
+        //对NewAccountForm表单进行前端验证
+        var validNewAccountForm = $("#NewAccountForm").validate({
+            rules: {
+                tbxTenderFileNum: { required: true, maxlength: 100 },
+                tbxProjectName: { required: true, maxlength: 100 }
+            }
+        });
+
+        //对EditProgressForm表单进行前端验证
+        var validEditProgressForm = $("#EditProgressForm").validate({
+            rules: {
+                tbxContractResponsiblePersonEdit: { required: true, maxlength: 100 },
+                tbxProjectNameEdit: { required: true, maxlength: 100 }
+            }
+        });
+
+        //新增台账提交
+        $("#btnNewAccountSubmit").click(function () {
+            if (validNewAccountForm.form()) {
+                Ewin.confirm({ message: "确定要提交吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    else {
+                        $("#NewAccountForm").ajaxSubmit({
+                            url: "/Account/InsertMaterial",
+                            type: "post",
+                            success: function (result) {
+                                if (result === "ok") {
+                                    $("#NewAccountModal").modal("hide");
+                                    toastr.success("操作成功！", "提示");
+                                    $("#bsTable").bootstrapTable('refresh');
+                                }
+                            },
+                            error: function (error) {
+                                console.log(error);
+                                toastr.error(error, "提示");
+                                return;
+                            }
+                        });
+                    }
+                });
+            };
+        });
+
+        //修改进度提交
+        $("#btnEditProgressSubmit").click(function () {
+            if (validEditProgressForm.form()) {
+                Ewin.confirm({ message: "确定要提交吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    else {
+                        $("#EditProgressForm").ajaxSubmit({
+                            url: "/ProgressInfo/Update",
+                            type: "post",
+                            success: function (result) {
+                                if (result == "ok") {
+                                    $("#EditProgressModal").modal("hide");
+                                    toastr.success("操作成功！", "提示");
+                                    $("#bsTable").bootstrapTable('refresh');
+                                }
+                            },
+                            error: function (error) {
+                                console.log(error);
+                                toastr.error(error, "提示");
+                                return;
+                            }
+                        });
+                    }
+                });
+            };
+        });
+    });
+</script>
