修改物资台账，更改台账数据模型，将物资、工程台账合并为一个

--- a/TenderInfo/Views/ProgressInfo/ProgressMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ProgressMaterial.cshtml
@@ -24,9 +24,9 @@
                         <button id="btnAdd" type="button" class="btn btn-info">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 新增
                         </button>
-                        @*<button id="btnEdit" type="button" class="btn btn-info">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 编辑
-                            </button>*@
+                        @*<button id="btnChooseAccount" type="button" class="btn btn-success">
+                            <span class="glyphicon glyphicon-check" aria-hidden="true"></span> 选择台账
+                        </button>*@
                     </div>
                 }
                 @Html.Partial("TableInfoMaterial")
