--- a/TenderInfo/Views/Account/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/Account/TableInfoMaterial.cshtml
@@ -12,10 +12,12 @@
             limit: params.limit,   //页面大小
             offset: params.offset,  //页码
 
-            projectName: $("#tbxProjectNameSearch").text()//项目名称
+            projectName: $("#tbxProjectNameSearch").text(),//项目名称
+            projectType: $("#accountType").text()
         };
         return temp;
     };
+
     $(function () {
         var columns = [
             [
@@ -38,7 +40,7 @@
                     visible: true,
                     formatter: function (value, row, index) {//这里的三个参数：value表示当前行当前列的值；row表示当前行的数据；index表示当前行的索引（从0开始）。
                         var html = '<button type="button" onclick="editModel(' + row.AccountMaterialID + ')" class="btn btn-link">' + row.ProjectName + '</button >';
-                        var html2 = "<a href='/Account/EditAccountMaterial?id=" + row.AccountMaterialID + "'>" + row.ProjectName + '</a>';
+                        var html2 = "<a href='/Account/EditAccountMaterial?id=" + row.AccountID + "'>" + row.ProjectName + '</a>';
                         return html2;
                     }
                 },
@@ -65,14 +67,14 @@
                     title: '招标项目负责人'
                 },
                 {
-                    field: 'UsingDept',
+                    field: 'UsingDeptName',
                     rowspan: 2,
                     colspan: 1,
                     valign: "middle",
                     title: '使用单位'
                 },
                 {
-                    field: 'ProjectResponsibleDept',
+                    field: 'ProjectResponsibleDeptName',
                     rowspan: 2,
                     colspan: 1,
                     valign: "middle",
@@ -433,7 +435,7 @@
         ];
         //初始化BS-Table
         $('#bsTable').bootstrapTable({
-            url: '/Account/GetMaterialList',         //请求后台的URL（*）
+            url: '/Account/GetList',         //请求后台的URL（*）
             contentType: 'application/x-www-form-urlencoded',
             method: 'post',                     //请求方式（*）
             toolbar: '#toolbar',                //工具按钮用哪个容器
