--- a/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
@@ -35,7 +35,83 @@
         if ($("#userRole").text().trim() != "招标管理") {
             $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
         }
-    }
+    };
+    var selectModel = function (id) {
+        //根据当前行的id获取当前的行数据
+        var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
+        $("#selectMaterialAccountModal").modal("show");
+        $("#lblProgressInfoID").text(row.ProgressInfoID);
+        $("#lblProjectName").text(row.ProjectName);
+        $("#lblProgressTypeChild").text(row.ProgressTypeChild);
+        $("#lblProjectResponsiblePersonName").text(row.ProjectResponsiblePersonName);
+
+        //初始化BS-Table
+        $('#bsTableSelectAccount').bootstrapTable({
+            url: '/Account/GetMaterialListForSelect',         //请求后台的URL（*）
+            contentType: 'application/x-www-form-urlencoded',
+            method: 'post',                     //请求方式（*）
+            striped: true,                      //是否显示行间隔色
+            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+            pagination: false,                   //是否显示分页（*）
+            sortable: false,                     //是否启用排序
+            sortOrder: "asc",                   //排序方式
+            sidePagination: "client",           //分页方式：client客户端分页，server服务端分页（*）
+            pageNumber: 1,                       //初始化加载第一页，默认第一页
+            pageSize: 10,                       //每页的记录行数（*）
+            pageList: [5, 10, 15, 20],        //可供选择的每页的行数（*）
+            search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+            strictSearch: true,
+            showColumns: true,                  //是否显示所有的列
+            showRefresh: true,                  //是否显示刷新按钮
+            minimumCountColumns: 2,             //最少允许的列数
+            clickToSelect: false,                //是否启用点击选中行
+            //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            uniqueId: "AccountMaterialID",          //每一行的唯一标识，一般为主键列
+            showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
+            cardView: false,                    //是否显示详细视图
+            detailView: false,                   //是否显示父子表
+            paginationPreText: "上一页",
+            paginationNextText: "下一页",
+            showExport: false,                     //是否显示导出
+            columns: [
+                {
+                    radio: true,
+                    valign: "middle"
+                },
+                {
+                    title: '序号',
+                    valign: "middle",
+                    align:"center",
+                    width: 45,
+                    formatter: function (value, row, index) {
+                        return index + 1;
+                    }
+                },
+                {
+                    field: 'ProjectName',
+                    title: '项目名称',
+                    valign: "middle",
+                    visible: true
+                },
+                {
+                    field: 'TenderFileNum',
+                    title: '项目文件编号',
+                    valign: "middle",
+                    visible: true
+                },
+                {
+                    field: 'IsOnline',
+                    title: '线上/线下',
+                    valign: "middle"
+                },
+                {
+                    field: 'ProjectResponsiblePersonName',
+                    valign: "middle",
+                    title: '招标项目负责人'
+                }
+            ]
+        });
+    };
     $(function () {
         var operateEvents = {
             'click .editProgress': function (e, value, row, index) {
@@ -83,6 +159,17 @@
                         width: 45,
                         formatter: function (value, row, index) {
                             return index + 1;
+                        }
+                    },
+                    {
+                        title: '台账选择',
+                        rowspan: 2,
+                        colspan: 1,
+                        valign: "middle",
+                        visible: true,
+                        formatter: function (value, row, index) {//这里的三个参数：value表示当前行当前列的值；row表示当前行的数据；index表示当前行的索引（从0开始）。
+                            var html = '<button type="button" onclick="selectModel(' + row.ProgressInfoID + ')" class="btn btn-link">选择</button >';
+                            return html;
                         }
                     },
                     {
@@ -317,7 +404,7 @@
                 ]
             ];
             return tempArray;
-        };
+        }
 
         var columns = loadColumns();
 
@@ -353,7 +440,7 @@
             showExport: false,                     //是否显示导出
             columns: columns,
             fixedColumns: true,
-            fixedNumber: 3
+            fixedNumber: 4
         })
             .on('all.bs.table', function (e, name, args) {
                 $('[data-toggle="tooltip"]').tooltip();
