--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -18,8 +18,15 @@
             margin-top: -25px;
             margin-left: -150px;
         }
-        hr {margin-top: 5px;margin-bottom: 5px;}
-        label.error {color: red;}
+
+        hr {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+
+        label.error {
+            color: red;
+        }
     </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -317,6 +324,17 @@
                 return date.toLocaleString();
             }
 
+            //json日期时间格式化
+            function getJsonDateTimeMinute(jsonDate) {
+                var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
+                var date = new Date(milliseconds);
+                var month = (date.getMonth() + 1) < 10 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1);
+                var day = date.getDate() < 10 ? ("0" + date.getDate()) : date.getDate();
+                var hour = date.getHours() < 10 ? ("0" + date.getHours()) : date.getHours();
+                var minute = date.getMinutes() < 10 ? ("0" + date.getMinutes()) : date.getMinutes();
+                return date.getFullYear() + '-' + month + '-' + day + " " + hour + ":" + minute;
+            }
+
             //json日期格式化
             function getJsonDate(jsonDate) {
                 var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
@@ -324,12 +342,17 @@
                 return date.getFullYear() + '年' + (date.getMonth() + 1) + '月' + date.getDate() + '日';
             }
 
-            //json日期格式化
+            //json日期格式化short
             function getJsonDateShort(jsonDate) {
-                var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
-                var date = new Date(milliseconds);
-                var month = (date.getMonth() + 1);
-                return date.getFullYear() + '-' + (month < 10 ? "0" + month :month) + '-' + (date.getDate() < 10 ? ("0" + date.getDate()) : date.getDate());
+                if (jsonDate !== null) {
+                    var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
+                    var date = new Date(milliseconds);
+                    var month = (date.getMonth() + 1);
+                    return date.getFullYear() + '-' + (month < 10 ? "0" + month : month) + '-' + (date.getDate() < 10 ? ("0" + date.getDate()) : date.getDate());
+                }
+                else {
+                    return "";
+                }
             }
 
             $(document).ready(function () {
