完成物资台账子表显示功能，挑战物资台账格式

--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -326,13 +326,18 @@
 
             //json日期时间格式化
             function getJsonDateTimeMinute(jsonDate) {
-                var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
-                var date = new Date(milliseconds);
-                var month = (date.getMonth() + 1) < 10 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1);
-                var day = date.getDate() < 10 ? ("0" + date.getDate()) : date.getDate();
-                var hour = date.getHours() < 10 ? ("0" + date.getHours()) : date.getHours();
-                var minute = date.getMinutes() < 10 ? ("0" + date.getMinutes()) : date.getMinutes();
-                return date.getFullYear() + '-' + month + '-' + day + " " + hour + ":" + minute;
+                if (jsonDate !== null) {
+                    var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
+                    var date = new Date(milliseconds);
+                    var month = (date.getMonth() + 1) < 10 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1);
+                    var day = date.getDate() < 10 ? ("0" + date.getDate()) : date.getDate();
+                    var hour = date.getHours() < 10 ? ("0" + date.getHours()) : date.getHours();
+                    var minute = date.getMinutes() < 10 ? ("0" + date.getMinutes()) : date.getMinutes();
+                    return date.getFullYear() + '-' + month + '-' + day + " " + hour + ":" + minute;
+                }
+                else {
+                    return "";
+                }
             }
 
             //json日期格式化
