将澄清、异议处理变为多项存储，处理多项显示问题，去掉中标通知书时间、增加中标金额单价

--- a/TenderInfo/Views/Account/Project.cshtml
+++ b/TenderInfo/Views/Account/Project.cshtml
@@ -1,8 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "Project";
+    ViewBag.Title = "招标管理台账--工程";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<span id="userRole" class="hidden">
+    @if (User.IsInRole("招标管理"))
+    {
+        @:招标管理
+    }
+</span>
+<span id="accountType" class="hidden">工程</span>
+
+@Html.Partial("NewAccountModal")
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">招标管理台账--工程</h3>
