--- a/TenderInfo/Views/Account/EditAccountProject.cshtml
+++ b/TenderInfo/Views/Account/EditAccountProject.cshtml
@@ -38,35 +38,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="tbxProductManufacturerEdit">产品制造商（代理、贸易商投标时填写）</label>
-                                        <input id="tbxProductManufacturerEdit" name="tbxProductManufacturerEdit" type="text" class="form-control" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label for="tbxQuotedPriceUnitEdit">报价--单价</label>
-                                        <input id="tbxQuotedPriceUnitEdit" name="tbxQuotedPriceUnitEdit" type="text" class="form-control" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label for="tbxQuotedPriceSumEdit">报价--总价（万元）</label>
+                                        <label for="tbxQuotedPriceSumEdit">报价（万元）</label>
                                         <input id="tbxQuotedPriceSumEdit" name="tbxQuotedPriceSumEdit" type="text" class="form-control" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label for="ddlNegationExplain">初步评审是否被否决</label>
-                                        <select class="form-control" id="ddlNegationExplain" name="ddlNegationExplain">
-                                            <option value="否" selected>否</option>
-                                            <option value="是">是</option>
-                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -444,17 +417,10 @@
                             <div class="form-group">
                                 <label for="tbxProjectResponsiblePersonEdit">招标项目负责人</label>
                                 <input id="tbxProjectResponsiblePersonEdit" name="tbxProjectResponsiblePersonEdit" class="form-control input-sm" placeholder="项目文件编号" />
-                                @*<select id="ddlProjectResponsiblePersonEdit" name="ddlProjectResponsiblePersonEdit" class="form-control input-sm"></select>*@
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="ddlUsingDeptEdit">使用单位</label>
-                                <select id="ddlUsingDeptEdit" name="ddlUsingDeptEdit" class="form-control input-sm DeptSelect"></select>
-                            </div>
-                        </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="ddlProjectResponsibleDeptEdit">项目主责部门</label>
@@ -477,40 +443,34 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
+                                <label for="tbxInvestSourceEdit">资金来源</label>
+                                <input id="tbxInvestSourceEdit" name="tbxInvestSourceEdit" class="form-control input-sm" placeholder="资金来源" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
                                 <label for="tbxTenderRangeEdit">招标范围</label>
                                 <input id="tbxTenderRangeEdit" name="tbxTenderRangeEdit" class="form-control input-sm" placeholder="招标范围" />
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderModeEdit">招标方式</label>
-                                <input id="tbxTenderModeEdit" name="tbxTenderModeEdit" class="form-control input-sm" placeholder="招标方式" />
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="tbxBidEvaluationEdit">评标方法</label>
-                                <input id="tbxBidEvaluationEdit" name="tbxBidEvaluationEdit" class="form-control input-sm" placeholder="评标方法" />
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="tbxSupplyPeriodEdit">供货期</label>
-                                <input id="tbxSupplyPeriodEdit" name="tbxSupplyPeriodEdit" class="form-control input-sm" placeholder="供货期" />
+                                <label for="tbxProjectTimeLimitEdit">工期</label>
+                                <input id="tbxProjectTimeLimitEdit" name="tbxProjectTimeLimitEdit" class="form-control input-sm" placeholder="工期" />
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderProgramAuditDateEdit">招标方案联审时间</label>
-                                <input id="tbxTenderProgramAuditDateEdit" name="tbxTenderProgramAuditDateEdit" class="form-control input-sm accountDate" placeholder="招标方案联审时间" />
+                                <label for="tbxProgramAcceptDateEdit">收到申请日期（线上项目填方案分派日期）</label>
+                                <input id="tbxProgramAcceptDateEdit" name="tbxProgramAcceptDateEdit" class="form-control input-sm accountDate" placeholder="收到方案日期" />
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxProgramAcceptDateEdit">收到方案日期</label>
-                                <input id="tbxProgramAcceptDateEdit" name="tbxProgramAcceptDateEdit" class="form-control input-sm accountDate" placeholder="收到方案日期" />
+                                <label for="tbxTenderProgramAuditDateEdit">联审日期</label>
+                                <input id="tbxTenderProgramAuditDateEdit" name="tbxTenderProgramAuditDateEdit" class="form-control input-sm accountDate" placeholder="招标方案联审时间" />
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -556,7 +516,8 @@
                     </div>
 
                     <div class="panel panel-default">
-                        <div class="panel-heading">投标人信息
+                        <div class="panel-heading">
+                            投标人信息
                             <button id="btnFirstAdd" type="button" class="btn btn-success btn-sm">新增</button>
                         </div>
                         <div class="panel-body">
@@ -565,16 +526,10 @@
                                     <table class="table table-bordered table-condensed table-hover">
                                         <thead>
                                             <tr>
-                                                <th rowspan="2" class="text-center" style="vertical-align:middle">操作</th>
-                                                <th rowspan="2" class="text-center" style="vertical-align:middle">购买招标文件潜在投标人</th>
-                                                <th rowspan="2" class="text-center" style="vertical-align:middle">投标人</th>
-                                                <th rowspan="2" class="text-center" style="vertical-align:middle">产品制造商（代理、贸易商投标时填写）</th>
-                                                <th colspan="2" rowspan="1" class="text-center">报价（元）</th>
-                                                <th rowspan="2" class="text-center" style="vertical-align:middle">初步评审被否决时在此栏说明</th>
-                                            </tr>
-                                            <tr>
-                                                <th class="text-center">单价</th>
-                                                <th class="text-center">总价</th>
+                                                <th class="text-center" style="vertical-align:middle">操作</th>
+                                                <th class="text-center" style="vertical-align:middle">购买招标文件潜在投标人</th>
+                                                <th class="text-center" style="vertical-align:middle">投标人</th>
+                                                <th class="text-center" style="vertical-align:middle">报价（万元）</th>
                                             </tr>
                                         </thead>
                                         <tbody id="tableFirst"></tbody>
@@ -599,34 +554,22 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderRestrictUnitPriceEdit">招标控制价--单价</label>
-                                <input id="tbxTenderRestrictUnitPriceEdit" name="tbxTenderRestrictUnitPriceEdit" class="form-control input-sm" placeholder="招标控制单价" />
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="tbxTenderRestrictSumPriceEdit">招标控制价--总价（万元）</label>
-                                <input id="tbxTenderRestrictSumPriceEdit" name="tbxTenderRestrictSumPriceEdit" class="form-control input-sm" placeholder="招标控制价--总价（万元）" />
+                                <label for="tbxTenderRestrictSumPriceEdit">招标控制价（万元）</label>
+                                <input id="tbxTenderRestrictSumPriceEdit" name="tbxTenderRestrictSumPriceEdit" class="form-control input-sm" placeholder="招标控制单价" />
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderSuccessUnitPriceEdit">中标金额--单价</label>
-                                <input id="tbxTenderSuccessUnitPriceEdit" name="tbxTenderSuccessUnitPriceEdit" class="form-control input-sm" placeholder="中标金额--单价" />
+                                <label for="tbxTenderSuccessSumPriceEdit">中标金额（万元）</label>
+                                <input id="tbxTenderSuccessSumPriceEdit" name="tbxTenderSuccessSumPriceEdit" class="form-control input-sm" placeholder="中标金额（元）总价" />
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderSuccessSumPriceEdit">中标金额--总价（万元）</label>
-                                <input id="tbxTenderSuccessSumPriceEdit" name="tbxTenderSuccessSumPriceEdit" class="form-control input-sm" placeholder="中标金额--总价（万元）" />
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="tbxSaveCapitalEdit">与控制价比节约资金（万元）</label>
-                                <input id="tbxSaveCapitalEdit" name="tbxSaveCapitalEdit" class="form-control input-sm" placeholder="与控制价比节约资金（万元）" />
+                                <label for="tbxSaveCapitalEdit">节约资金（万元）</label>
+                                <input id="tbxSaveCapitalEdit" name="tbxSaveCapitalEdit" class="form-control input-sm" placeholder="与控制价比节约资金（元）" />
                             </div>
                         </div>
                     </div>
@@ -642,7 +585,7 @@
                                     <table class="table table-bordered table-condensed table-hover">
                                         <thead>
                                             <tr>
-                                                <th colspan="6" class="text-center">评标委员会</th>
+                                                <th colspan="6" class="text-center"></th>
                                             </tr>
                                             <tr>
                                                 <th class="text-center">操作</th>
@@ -1139,10 +1082,7 @@
                     list += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnFirstDel' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
                     list += "<td>" + valueOfElement["TenderFilePlanPayPerson"] + "</td>";
                     list += "<td>" + valueOfElement["TenderPerson"] + "</td>";
-                    list += "<td>" + valueOfElement["ProductManufacturer"] + "</td>";
-                    list += "<td>" + valueOfElement["QuotedPriceUnit"] + "</td>";
                     list += "<td>" + valueOfElement["QuotedPriceSum"] + "</td>";
-                    list += "<td>" + valueOfElement["NegationExplain"] + "</td>";
                     list += "</tr>";
                 });
                 $("#tableFirst").empty().append(list);
@@ -1239,10 +1179,7 @@
             $.post("/Account/GetOneEdit", args, function (result) {
                 $("#tbxTenderFilePlanPayPersonEdit").val(result.TenderFilePlanPayPerson);
                 $("#tbxTenderPersonEdit").val(result.TenderPerson);
-                $("#tbxProductManufacturerEdit").val(result.ProductManufacturer);
-                $("#tbxQuotedPriceUnitEdit").val(result.QuotedPriceUnit);
                 $("#tbxQuotedPriceSumEdit").val(result.QuotedPriceSum);
-                $("#ddlNegationExplain").val(result.NegationExplain);
             });
         });
         $(document).on("click", ".btnFirstDel", function () {
@@ -1276,7 +1213,7 @@
             $.post("/Account/GetOneEdit", args, function (result) {
                 $("#tbxEvaluationPersonNameEdit").val(result.EvaluationPersonName);
                 $("#ddlEvaluationPersonDeptEdit").val(result.EvaluationPersonDeptID);
-                $("#ddlIsEvaluationDirectorEdit").val(result.IsEvaluationDirector);
+                $("#tbxIsEvaluationDirectorEdit").val(result.IsEvaluationDirector);
                 $("#tbxEvaluationCostEdit").val(result.EvaluationCost);
                 $("#tbxEvaluationTimeEdit").val(result.EvaluationTime);
             });
@@ -1430,7 +1367,7 @@
                         success: function (result) {
                             if (result === "ok") {
                                 toastr.success("操作成功！", "提示");
-                                window.location.href = "/Account/Material";
+                                window.location.href = "/Account/Project";
                             }
                         },
                         error: function (error) {
@@ -1446,15 +1383,18 @@
         function GetInfo() {
             var accountID = $("#tbxAccountIDEdit").val();
             $.post("/Account/GetOne", { "accountID": accountID }, function (result) {
+                console.log(result.TenderInfo);
                 $("#tbxProjectNameEdit").val(result.ProjectName);
                 $("#tbxTenderFileNumEdit").val(result.TenderFileNum);
                 $("#ddlIsOnlineEdit").val(result.IsOnline);
                 $("#tbxProjectResponsiblePersonEdit").val(result.ProjectResponsiblePersonName);
 
-                $("#ddlUsingDeptEdit").val(result.UsingDeptID);
                 $("#ddlProjectResponsibleDeptEdit").val(result.ProjectResponsibleDeptID);
                 $("#tbxApplyPersonEdit").val(result.ApplyPerson);
                 $("#tbxInvestPlanApproveNumEdit").val(result.InvestPlanApproveNum);
+
+                $("#tbxInvestSourceEdit").val(result.InvestSource);
+                $("#tbxProjectTimeLimitEdit").val(result.ProjectTimeLimit);
 
                 $("#tbxTenderRangeEdit").val(result.TenderRange);
                 $("#tbxTenderModeEdit").val(result.TenderMode);
@@ -1470,9 +1410,8 @@
 
                 $("#tbxTenderSuccessPersonEdit").val(result.TenderSuccessPerson);
                 $("#tbxPlanInvestPriceEdit").val(result.PlanInvestPrice);
-                $("#tbxTenderRestrictUnitPriceEdit").val(result.TenderRestrictUnitPrice);
+                $("#tbxTenderRestrictSumPriceEdit").val(result.TenderRestrictSumPrice);
 
-                $("#tbxTenderSuccessUnitPriceEdit").val(result.TenderSuccessUnitPrice);
                 $("#tbxTenderSuccessSumPriceEdit").val(result.TenderSuccessSumPrice);
                 $("#tbxSaveCapitalEdit").val(result.SaveCapital);
 
